<resources>
    <string name="shared_user_label">Relay ME</string>
    <string name="btn_later">Later</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_app_name">Relay ME</string>
    <string name="lbl_alert_title">Alert</string>
    <string name="lbl_warning_title">Warning</string>
    <string name="lbl_error_title">Error</string>
    <string name="lbl_please_wait">Please wait</string>
    <string name="lbl_dont_show_again">Don\'t show again.</string>
    <string name="lbl_no_description"></string>
    <string name="lbl_unknown">Unknown</string>
    <string name="lbl_internal_error">An internal error occurred. Please contact us using the help menu for help.</string>
    <string name="lbl_no_internet_browser">Couldn\'t find an Internet browser on your phone. Please check and try again. Alternatively open this URL manually: %s</string>
    <string name="lbl_no_internet_connection">Couldn\'t connect to the Internet, please check your connectivity and try again.</string>
    <string name="lbl_not_in_sync_with_server">Trying to connect to server, please check back in a few seconds.</string>
    <string name="lbl_failed_to_sync_with_server">Failed to connect to server, please contact us for help.</string>
    <string name="lbl_internet_connection_lost">Lost Internet connectivity.</string>
    <string name="lbl_pending_messages">There are pending messages.</string>
    <string name="lbl_replying_disabled">Replying to messages is turned off.</string>
    <string name="lbl_service_off">Service is currently turned or scheduled off.</string>
    <string name="lbl_oauth_error">An error occurred linking your GMail account, please try again and contact us if the problem persists.</string>
    <string name="lbl_unable_to_import">Couldn\'t import data from the old app. Please re-configure the app manually.</string>
    <string name="lbl_configuration_not_done_target">Configuration in-complete: Please set up where your texts should be sent to.</string>
    <string name="lbl_configuration_not_done_gateway">Configuration in-complete: Please set up how I am going to send/receive emails.</string>
    <string name="lbl_using_deprecated_oauth">You have set up your GMail account using deprecated OAuth 1.0 which is no longer supported by Google. Please re-link your GMail account.</string>
    <string name="lbl_checking_smtp_server">Testing your SMTP server...</string>
    <string name="lbl_invalid_smtp_server_configuration">Invalid SMTP server configuration.</string>
    <string name="lbl_smtp_server_connection_failed">SMTP server test failed: %s</string>
    <string name="lbl_checking_imap_server">Testing your IMAP server...</string>
    <string name="lbl_invalid_imap_server_configuration">Invalid IMAP server configuration.</string>
    <string name="lbl_imap_server_connection_failed">IMAP server test failed: %s</string>
    <string name="lbl_notification_heading">Relay ME</string>
    <string name="acn_go_pro">Upgrade</string>
    <string name="acn_import">Import Settings</string>
    <string name="acn_rate_us">Rate Me</string>
    <string name="acn_help">Help</string>
    <string name="acn_about">About</string>
    <string name="lbl_tab_configuration">Settings</string>
    <string name="lbl_tab_errors">Errors</string>
    <string name="lbl_tab_messages">Messages</string>
    <string name="lbl_pro_app_missing">Couldn\'t find the unlocker app.</string>
    <string name="lbl_pro_app_not_uptodate">Unlocker app is not up-to-date. Please update it to the latest version before retrying.</string>
    <string name="lbl_import_complete">Settings imported successfully.</string>
    <string name="lbl_feature_all">All</string>
    <string name="lbl_feature_all_desc">All Features</string>
    <string name="lbl_feature_poc">POC</string>
    <string name="lbl_feature_poc_desc">Proof of Concept Features</string>
    <string name="lbl_feature_pro">Pro</string>
    <string name="lbl_feature_pro_desc">Pro Features</string>
    <string name="lbl_already_purchased_error">You have already purchased this feature.</string>
    <string name="lbl_billing_inventory_query_error">Couldn\'t check status of purchases from Google.</string>
    <string name="lbl_billing_setup_error">In-app billing is not set up on this device.</string>
    <string name="lbl_purchasing_error">Couldn\'t purchase this feature.</string>
    <string name="lbl_verifying_developer_payload">Verification failed.</string>
    <string name="btn_add_target_email">Add</string>
    <string name="btn_setup_target_email">Set target email address</string>
    <string name="btn_setup_target_cc_email">Add CC</string>
    <string name="btn_cancel_edit_target_email">Cancel</string>
    <string name="btn_edit_target_email">Edit</string>
    <string name="btn_save_target_email">Save</string>
    <string name="btn_test_now">Check</string>
    <string name="btn_save_anyway">Save anyway</string>
    <string name="btn_delete_target_email">Delete</string>
    <string name="btn_delete_target_cc_email">Delete</string>
    <string name="btn_setup_gmail_gateway">Link GMail account</string>
    <string name="btn_setup_smtp_server">Set up</string>
    <string name="btn_delete_smtp_server">Delete SMTP server</string>
    <string name="btn_edit_smtp_server">Edit SMTP server</string>
    <string name="btn_setup_imap_server">Set up</string>
    <string name="btn_delete_imap_server">Delete IMAP server</string>
    <string name="btn_edit_imap_server">Edit IMAP server</string>
    <string name="btn_delete_email_gateway">Delete GMail gateway</string>
    <string name="btn_clear_oauth">Remove</string>
    <string name="btn_upgrade">Upgrade</string>
    <string name="btn_check_sms">Troubleshoot</string>
    <string name="btn_set_schedule">Set Schedule</string>
    <string name="btn_set_trigger_code">Set SMS Code</string>
    <string name="btn_edit_reply_source">Edit</string>
    <string name="btn_edit_email_subject_prefix">Edit email subject prefix</string>
    <string name="lbl_add_cc_email">Add CC</string>
    <string name="lbl_cc_email_field_label">CC</string>
    <string name="lbl_setup_instructions_target_email">Please specify where your texts should be forwarded to.</string>
    <string name="lbl_setup_instructions_email_gateway">Please link a GMail account.</string>
    <string name="lbl_targets_title">Forward to</string>
    <string name="lbl_gateway_type_title">Send via</string>
    <string name="lbl_reply_switch_title">Check for replies</string>
    <string name="lbl_reply_gateway_not_setup">Please configure a reply gateway to see more options.</string>
    <string name="lbl_reply_status_switch">Report back status</string>
    <string name="lbl_replying_from_different_email">Replying from a different email</string>
    <string name="lbl_mailbox">Look in</string>
    <string name="lbl_tell_me_about_missed_calls">Tell me about missed calls</string>
    <string name="lbl_connecting_to_google">Connecting to Google...</string>
    <string name="lbl_oauth_success">GMail account successfully linked.</string>
    <string name="lbl_activation_status">Service status</string>
    <string name="lbl_activation_disabled">Off</string>
    <string name="lbl_activation_always">On</string>
    <string name="lbl_activation_scheduled">Scheduled</string>
    <string name="lbl_forwarding_method_sms">SMS</string>
    <string name="lbl_forwarding_method_email">Email</string>
    <string name="lbl_service_trigger_help">You can always turn the service on by sending yourself the code %s in a text message.</string>
    <string name="lbl_service_schedule_help">Please specify times in 24-hour format (HH:MM).</string>
    <string name="lbl_service_schedule_current">Service will be on from %1$s to %2$s.</string>
    <string name="lbl_service_schedule_current_next_day">Service will be on from %1$s to %2$s (next day).</string>
    <string name="lbl_service_schedule_start">From</string>
    <string name="lbl_service_schedule_end">To</string>
    <string name="lbl_gateway_type_builtin">BuiltIn</string>
    <string name="lbl_gateway_type_gmail">GMail</string>
    <string name="lbl_gateway_type_custom">SMTP/IMAP</string>
    <string name="lbl_gateway_type_title_builtin">You will receive emails from sms@codolutions.com.</string>
    <string name="lbl_gateway_type_title_gmail">I will use a GMail account provided by you to send emails.</string>
    <string name="lbl_gateway_type_title_custom">I will use your own SMTP/IMAP server to send and receive emails.</string>
    <string name="lbl_smtp_server_email">Email</string>
    <string name="lbl_smtp_server_ip">Hostname</string>
    <string name="lbl_smtp_server_port">Port</string>
    <string name="lbl_smtp_server_authentication">Authentication required</string>
    <string name="lbl_smtp_server_username">Username</string>
    <string name="lbl_smtp_server_password">Password</string>
    <string name="lbl_smtp_server_security">Security</string>
    <string name="lbl_imap_server_ip">Hostname</string>
    <string name="lbl_imap_server_port">Port</string>
    <string name="lbl_imap_server_authentication">Authentication required</string>
    <string name="lbl_imap_server_username">Username</string>
    <string name="lbl_imap_server_password">Password</string>
    <string name="lbl_imap_server_security">Security</string>
    <string name="lbl_server_security_ssl">SSL</string>
    <string name="lbl_server_security_starttls">STARTTLS</string>
    <string name="lbl_server_security_ssl_starttls">STARTTLS/SSL</string>
    <string name="lbl_polling_factor">Optimize for</string>
    <string name="lbl_polling_factor_fast">Faster response</string>
    <string name="lbl_email_subject_prefix">Email subject prefix</string>
    <string name="hnt_email_subject_prefix_text_box">Email subject prefix</string>
    <string name="lbl_message_delete_all_dialog_confirmation">I will delete all the messages if you confirm.</string>
    <string name="btn_about_dialog_website">Web</string>
    <string name="btn_about_dialog_email">Email</string>
    <string name="btn_about_dialog_help">Help</string>
    <string name="lbl_about_dialog_icon_description">Application icon</string>
    <string name="lbl_about_dialog_version">Version: %s</string>
    <string name="lbl_about_dialog_date">Date: %s</string>
    <string name="lbl_about_dialog_copyright">by Codolutions</string>
    <string name="lbl_about_dialog_details">Thanks for using Relay ME. Please feel free to send your feedback using links below.</string>
    <string name="btn_help_dialog_check_wiki">Check Wiki</string>
    <string name="btn_help_dialog_contact_us">Contact Us</string>
    <string name="lbl_help_dialog_header">If you are having issues with this app, please check the wiki first. You might find your answer there.</string>
    <string name="lbl_help_dialog_details">Still having problems? Please feel free to contact us for help.</string>
    <string name="btn_sms_help_dialog_check_wiki">Check Wiki</string>
    <string name="btn_sms_help_dialog_contact_us">Contact Us</string>
    <string name="lbl_sms_help_dialog_header">Another application can prevent SMS messages from getting to me.</string>
    <string name="lbl_sms_help_dialog_details">Feel free to check the wiki or contact us for help.</string>
    <string name="btn_contact_support_dialog_send_logs">Send Logs</string>
    <string name="lbl_contact_support_dialog_header">In order to investigate the issue you are having, please fill out this form and submit. Logs and diagnostics information will also be sent with it.</string>
    <string name="lbl_contact_support_dialog_crashed">I detected a crash, please send some logs for us to investigate.</string>
    <string name="lbl_contact_support_dialog_category">What is the problem?</string>
    <string name="lbl_contact_support_dialog_comments">Can you tell us more?</string>
</resources>