<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutdialog"
    style="@style/dialoglayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:showDividers="middle" >

    <LinearLayout
        android:id="@+id/aboutdialogcontents"
        style="@style/dialogcontents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="horizontal"
                android:paddingBottom="16dp" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/lbl_about_dialog_icon_description"
                    android:src="@drawable/relayme" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="0dp" >

                    <TextView
                        style="@style/normaltext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_app_name" />

                    <TextView
                        style="@style/normaltext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_about_dialog_copyright" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="horizontal"
                android:paddingTop="16dp" >

                <TextView
                    android:id="@+id/aboutversion"
                    style="@style/normaltext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingRight="16dp"
                    android:text="@string/lbl_about_dialog_version" />

                <TextView
                    android:id="@+id/aboutdate"
                    style="@style/normaltext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_about_dialog_date" />
            </LinearLayout>

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/lbl_about_dialog_details" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/buttonbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/visitwebsite"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_about_dialog_website" />

        <Button
            android:id="@+id/emailus"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_about_dialog_email" />

        <Button
            android:id="@+id/help"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_about_dialog_help" />
    </LinearLayout>

</LinearLayout>