<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contactsupportdialog"
    style="@style/dialoglayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:showDividers="middle" >

    <LinearLayout
        style="@style/dialogcontents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:id="@+id/contactsupportdialogheading"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/lbl_contact_support_dialog_header" />

            <TextView
                android:id="@+id/contactsupportdialogcrashed"
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/lbl_contact_support_dialog_crashed"
                android:visibility="gone" />

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_contact_support_dialog_category" />

            <Spinner
                android:id="@+id/issuecategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp" />

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/lbl_contact_support_dialog_comments" />

            <EditText
                android:id="@+id/supportnotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="8"
                android:minLines="1"
                android:scrollbars="vertical" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/buttonbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/canceldialog"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/sendlogs"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_contact_support_dialog_send_logs" />
    </LinearLayout>

</LinearLayout>