<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/helpdialog"
    style="@style/dialoglayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:showDividers="middle" >

    <LinearLayout
        android:id="@+id/helpdialogcontents"
        style="@style/dialogcontents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/lbl_help_dialog_header" />

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_help_dialog_details" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/buttonbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/checkwiki"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_help_dialog_check_wiki" />

        <Button
            android:id="@+id/contactus"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_help_dialog_contact_us" />
    </LinearLayout>

</LinearLayout>