<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/confirmdeletemessagesdialog"
    style="@style/dialoglayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:showDividers="middle" >

    <LinearLayout
        style="@style/dialogcontents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                style="@style/normaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_message_delete_all_dialog_confirmation" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/buttonbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelmessagedelete"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/confirmmessagedelete"
            style="@style/buttonbarbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn_ok" />
    </LinearLayout>

</LinearLayout>